# cpp_build_skeleton

./: .gitignore  CMakeLists.txt  README.md  bounding_box.h  main.cpp  makefile  readme.md  spatial_hashing.h
src/: main.cpp  renderer.h  spatial_hashing.h
tests/: test_spatial_hashing.cpp
